create java script

--- a/index.html
+++ b/index.html
@@ -16,12 +16,7 @@
     <section class="container">
       <form>
         <i class="fa-solid fa-magnifying-glass"></i>
-        <input
-          type="text"
-          id="search-item"
-          placeholder="Search pro"
-          onkeyup="search()"
-        />
+        <input type="text" id="search-item" placeholder="Search pro" />
       </form>
       <div class="product-list" id="product-list">
         <div class="product">
